[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "plotly>=5.17.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]
